--- a/Project.ipynb
+++ b/Project.ipynb
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 169,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_business['city'] = df_business['city'].str.strip().str.capitalize()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 170,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +151,7 @@
        "Name: city, Length: 1134, dtype: int64"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 170,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [
     {
@@ -514,20 +523,6 @@
    "source": [
     "df_business_toronto[df_business_toronto['categories'].str.contains('Restaurants')]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -1049,6 +1044,13 @@
    "source": [
     "df_user.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
