ranking based on avg success score of categories

--- a/Investor_ResturantTypes.ipynb
+++ b/Investor_ResturantTypes.ipynb
@@ -78,6 +78,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Resturants.categories=Resturants.categories.str.lower()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [
@@ -97,22 +106,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Resturants.categories=Resturants.categories.str.split(',')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -128,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +214,7 @@
        "Name: categories, dtype: object"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -232,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +235,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('restaurants', 10),\n",
+       " ('food', 7),\n",
+       " ('bars', 4),\n",
+       " ('thai', 2),\n",
+       " ('tapas', 2),\n",
+       " ('japanese', 2),\n",
+       " ('nightlife', 2),\n",
+       " ('seafood', 2),\n",
+       " ('mediterranean', 2),\n",
+       " ('specialty', 1),\n",
+       " ('ethnic', 1),\n",
+       " ('small', 1),\n",
+       " ('plates', 1),\n",
+       " ('pubs', 1),\n",
+       " ('mexican', 1),\n",
+       " ('sandwiches', 1),\n",
+       " ('vietnamese', 1),\n",
+       " ('asian', 1),\n",
+       " ('fusion', 1),\n",
+       " ('delicatessen', 1),\n",
+       " ('italian', 1),\n",
+       " ('french', 1),\n",
+       " ('canadian', 1),\n",
+       " ('new', 1),\n",
+       " ('event', 1),\n",
+       " ('planning', 1),\n",
+       " ('services', 1),\n",
+       " ('caterers', 1),\n",
+       " ('comfort', 1),\n",
+       " ('international', 1),\n",
+       " ('lounges', 1),\n",
+       " ('cocktail', 1),\n",
+       " ('breakfast', 1),\n",
+       " ('brunch', 1),\n",
+       " ('chinese', 1),\n",
+       " ('live', 1),\n",
+       " ('raw', 1),\n",
+       " ('bakeries', 1),\n",
+       " ('desserts', 1),\n",
+       " ('middle', 1),\n",
+       " ('eastern', 1)]"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "words_freq"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +338,67 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It becomes cleare that there is no clear indication of what categories that are most popular."
+    "From here we see there is no clear indication of what categories that are most popular."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "count_vect = CountVectorizer()\n",
+    "bow_counts = count_vect.fit_transform(Resturants.categories.values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "avg_popularity=[]\n",
+    "for category in count_vect.vocabulary_.keys():\n",
+    "    resturants_with_category=Resturants.loc[Resturants.categories.str.contains(category),:]\n",
+    "    avg_popularity.append((category,resturants_with_category['sucess score'].sum()/len(resturants_with_category)))\n",
+    "avg_popularity=sorted(avg_popularity, key=lambda tup: tup[1],reverse=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "udon 1848.0\n",
+      "egyptian 991.5\n",
+      "nicaraguan 976.5\n",
+      "escape 783.0\n",
+      "landmarks 780.0\n",
+      "historical 780.0\n",
+      "buildings 780.0\n",
+      "laotian 578.5\n",
+      "farmers 543.9\n",
+      "ramen 542.9710144927536\n",
+      "furniture 488.0\n",
+      "izakaya 488.0\n",
+      "dumplings 469.6666666666667\n",
+      "breweries 466.94\n",
+      "mongolian 449.75\n",
+      "snow 427.25\n",
+      "wedding 427.0\n",
+      "hobby 404.0\n",
+      "tiki 392.0\n",
+      "noodles 379.67622950819674\n"
+     ]
+    }
+   ],
+   "source": [
+    "for word, freq in avg_popularity[:20]:\n",
+    "    print(word, freq)"
    ]
   }
  ],
