--- a/Investor_ResturantTypes.ipynb
+++ b/Investor_ResturantTypes.ipynb
@@ -11,6 +11,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Notes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "All categories does not appear meaningfull. Could we maybe try to do unsupervies learining to cluster the categories together... https://medium.com/@rohithramesh1991/unsupervised-text-clustering-using-natural-language-processing-nlp-1a8bc18b048d"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "In this part of the project we will be focusing on what types of resturants that holds the most intrest for the investor. T"
    ]
   },
