--- a/Investor_ResturantTypes.ipynb
+++ b/Investor_ResturantTypes.ipynb
@@ -48,11 +48,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Resturants=pd.read_csv('data/toronto_restaurant_business.csv',encoding=\"utf8\")"
+    "Resturants=pd.read_csv('data/toronto_restaurant_business2.csv',encoding=\"utf8\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Monday': '0:00-0:00',\n",
+       " 'Tuesday': '8:00-20:00',\n",
+       " 'Wednesday': '8:00-20:00',\n",
+       " 'Thursday': '8:00-21:00',\n",
+       " 'Friday': '8:00-21:00',\n",
+       " 'Saturday': '10:00-20:00',\n",
+       " 'Sunday': '12:00-19:00'}"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import json\n",
+    "json.loads(Resturants.iloc[6].hours)"
    ]
   },
   {
